//
// Created by ferra on 22/10/2024.
//

#ifndef ALBUM_H
#define ALBUM_H
#include "MusicRelease.h"

class Album : public MusicRelease{
protected:
public:
private:
};
#endif //ALBUM_H
